--- a/src/components/Age/Age.css
+++ b/src/components/Age/Age.css
@@ -123,7 +123,7 @@
     color: #11486E;
     font-size: medium;
     line-height: 27px !important;
-  
+
 }
 #Show0{
     display: flex;
@@ -131,13 +131,17 @@
     justify-content: center;
 }
 
-
-.alert{
+.optionAlert{
     padding: 5px 10px 5px 5px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     float:none;
+    width: 25%;
+    line-height: 5px;
+}
+.optionAlert #CheckBox{
+  margin-top: 2%;
 }
 
 #FreshFact{
