--- a/src/components/bodyLook8/bodyLook.css
+++ b/src/components/bodyLook8/bodyLook.css
@@ -46,3 +46,20 @@ font-weight: 600;
 .dogDis{
    background-color:  #F0F0F0;
 }
+
+
+.h4aP h4{
+    font-family: "cooper Hewitt";
+    font-weight: 500;
+    line-height: 54px;
+    font-style: normal;
+    font-size: large;
+
+}
+
+.h4aP p{
+    font-family: 'gt-pressura-regular' !important;
+    font-weight: 600 !important;
+    font-size: 18px !important;
+    letter-spacing: 1px !important;
+}
